# TorrentMix-WebUI

./: README.md  README.zh-CN.md
.github/workflows/: docker-image.yml  release.yml
deploy/sidecar/: README.md  README.zh-CN.md  updater.mjs
deploy/standalone-service/: Dockerfile  README.md  README.zh-CN.md
openspec/changes/add-sqlcipher-config-store/: tasks.md
openspec/changes/archive/2026-03-14-harden-distribution-contract/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-14-harden-distribution-contract/specs/distribution-consumers/: spec.md
openspec/changes/archive/2026-03-14-harden-distribution-contract/specs/distribution-release-contract/: spec.md
openspec/specs/distribution-consumers/: spec.md
openspec/specs/distribution-release-contract/: spec.md
rust/apps/desktop/: README.md  README.zh-CN.md
rust/apps/desktop/src-tauri/src/: main.rs
rust/crates/gateway/: Cargo.toml
rust/crates/gateway/src/: catalog.rs  key.rs  lib.rs  store.rs
rust/crates/gateway/src/migrations/: 01_init.sql  mod.rs
scripts/release/: build-publish.mjs
tests/: format.test.ts
